# flask-revou

./: .env.example  Makefile  pyproject.toml
app/: __init__.py
app/controllers/: animal_controller.py
app/db/: config.py
app/models/:  employee.py  animal.py
app/routes/: animal.py
migrations/versions/: 04a7e3f1b0ef_test.py  4a35c9eb9128_add_employees_table.py  f18643aea10e_animal_table.py
